--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,8 +1,8 @@
         @@include('icons.html')
-        
+
         <!-- Quelle: https://github.com/juliangarnier/anime -->
         <script src="assets/js/anime.min.js"></script>
 
-        <script src="assets/js/scripts.js"></script>
+        <script src="assets/js/app.bundle.js"></script>
     </body>
 </html>
