--- a/src/scss/1-settings/_settings.color.scss
+++ b/src/scss/1-settings/_settings.color.scss
@@ -6,11 +6,9 @@ $colors: (
         "default": #000
     ),
 	"grey": (
-        "xlight": #f0f0f0,
-		"light": #cbcbcb,
 		"default": #a9a9a9,
-		"dark": #848484,
-        "xdark": #404040
+		"dark": #1e272b,
+        "xdark": #111619
 	),
 	"white": (
 		"default": #fff
