--- a/src/scss/4-elements/_elements.base.scss
+++ b/src/scss/4-elements/_elements.base.scss
@@ -7,6 +7,8 @@ body {
     font-family: $font-paragraph;
     font-weight: 400;
     line-height: #{(24px / 16px)};
+    background-color: color('grey', 'xdark');
+    color: color('white');
 }
 
 em, i {
