--- a/src/scss/1-settings/_settings._typo.scss
+++ b/src/scss/1-settings/_settings._typo.scss
@@ -15,5 +15,5 @@ $modularscale: (
 );
 
 
-$font-paragraph: "Roboto", sans-serif;
-$font-headline: "Montserrat", sans-serif;
+$font-paragraph: "Lato", sans-serif;
+$font-headline: "Playfair Display", serif;
