--- a/src/scss/4-elements/_elements.headlines.scss
+++ b/src/scss/4-elements/_elements.headlines.scss
@@ -1,6 +1,7 @@
 h1, h2, h3, h4, h5, h6 {
     font-family: $font-headline;
-    font-weight: 600;
+    font-weight: 900;
+    font-style: italic;
 }
 
 h1 {
