--- a/src/html/partials/footer.njk
+++ b/src/html/partials/footer.njk
@@ -1,4 +1,4 @@
-        @@include('icons.html')
+        {% include "icons.njk" %}
 
         <!-- Quelle: https://github.com/juliangarnier/anime -->
         <script src="assets/js/anime.min.js"></script>
