--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -2,4 +2,24 @@
 
 {{ header("Theater im Parkett", "index.html") }}
 
+<div class="u-gapLarge">
+    <article class="c-intro">
+        <img class="c-intro__img" src="assets/img/intro.jpg" alt="">
+        <div class="c-intro__text">
+            <p class="o-subhead">Liebe</p>
+            <h2 class="c-intro__title">Theaterfreunde</h2>
+            <p>
+                seit mehr als 50 Jahren bieten wir auf unserer Amateurbühne ein
+                Programm für Groß und Klein. Wir spielen Klassiker – von
+                Shakespeares „Lustigen Weibern von Windsor“ bis zu Dürrenmatts
+                „Besuch der alten Dame“. Wir setzen uns aber auch mit
+                Gegenwartsstücken ganz junger Autoren auseinander. Und wir
+                bieten immer mehrere Stücke für Kinder an – besonders in der
+                Vorweihnachtszeit. Schauen Sie sich einfach auf unserem
+                Spielplan um!
+            </p>
+        </div>
+    </article>
+</div>
+
 {% include "footer.njk" %}
