--- a/src/scss/4-elements/_elements.base.scss
+++ b/src/scss/4-elements/_elements.base.scss
@@ -24,3 +24,15 @@ img {
 button {
 	cursor: pointer;
 }
+
+h1, h2, h3, h4, h5, h6 {
+    * + & {
+        margin-top: 0.8em;
+    }
+}
+
+p, blockquote {
+    * + & {
+        margin-top: 1em;
+    }
+}
