--- a/src/scss/4-elements/_elements.headlines.scss
+++ b/src/scss/4-elements/_elements.headlines.scss
@@ -2,22 +2,27 @@ h1, h2, h3, h4, h5, h6 {
     font-family: $font-headline;
     font-weight: 900;
     font-style: italic;
+    color: color('primary');
 }
 
 h1 {
     @include ms-respond('font-size', 6);
+    line-height: #{(16px / 16px)};
 }
 
 h2 {
     @include ms-respond('font-size', 5);
+    line-height: #{(18px / 16px)};
 }
 
 h3 {
     @include ms-respond('font-size', 4);
+    line-height: #{(20px / 16px)};
 }
 
 h4 {
     @include ms-respond('font-size', 3);
+    line-height: #{(22px / 16px)};
 }
 
 h5 {
