--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -1,6 +1,6 @@
 {% from "header.njk" import header %}
 
-{{ header("Theater im Parkett", "index.html") }}
+{{ header("Theater im Parkett", "index.html", true) }}
 
 <div class="u-gapLarge">
     <article class="c-intro">
