--- a/src/html/partials/footer.njk
+++ b/src/html/partials/footer.njk
@@ -4,6 +4,9 @@
         <!-- Quelle: https://github.com/juliangarnier/anime -->
         <script src="assets/js/anime.min.js"></script>
 
+        <!-- Quelle: https://github.com/kenwheeler/cash -->
+        <script src="assets/js/cash.min.js"></script>
+
         <script src="assets/js/app.bundle.js"></script>
     </body>
 </html>
