--- a/src/scss/6-components/_component.c-navigation.scss
+++ b/src/scss/6-components/_component.c-navigation.scss
@@ -28,7 +28,7 @@
     &__link {
         display: inline-block;
         text-decoration: none;
-        line-height: 60px;
+        line-height: 4em;
         padding: 1em 0;
     }
 }
