--- a/src/scss/6-components/_components.c-intro.scss
+++ b/src/scss/6-components/_components.c-intro.scss
@@ -1,6 +1,6 @@
 .c-intro {
     position: relative;
-    margin: 0 auto;
+    margin: 6em auto 0;
     padding: 0 1em;
     max-width: $grid-width;
     @include breakpoint('small'){
