--- a/src/html/festival.njk
+++ b/src/html/festival.njk
@@ -2,4 +2,52 @@
 
 {{ header("Theater im Parkett", "festival.html") }}
 
+<div class="c-festivalText u-gapLarge">
+    <div class="c-festivalText__content">
+        <h1>Festival</h1>
+        <p>
+            Für uns als Amateurbühne ist die Teilnahme am Festival Theaterfieber eine große
+            Ehre und eine besondere Herausforderung. Gemessen wird unsere Leistung an der
+            schauspielerischen Qualität, die Profis aus Staats- und Privattheatern auf die
+            Bühne bringen. Wer soll da kein Lampenfieber bekommen? Doch unsere
+            Vereinsvorsitzende, Marie Tausendschön, die selbst auf elf Jahre als Spielleiterin
+            zurückblickt, lässt sich davon nicht beindrucken:
+        </p>
+        <blockquote>
+            „Die Crew weiß, was sie kann. Und Herzklopfen gehört vor einer Aufführung einfach
+            dazu – ob Profi oder Amateur. Das berichten uns erfahrene Schauspieler und
+            Dramaturgen immer wieder, wenn sie mit uns Fortbildungen machen.“
+        </blockquote>
+        <p>
+            Außer der Ehre verbindet Marie Tausendschön mit der Teilnahme am Festival zwei
+            Hoffnungen:
+        </p>
+        <blockquote>
+            „Ich wünsche mir, dass wir ein Publikum auf uns aufmerksam machen, das uns bisher
+            gar nicht kannte. Und vielleicht meldet sich ja auch der eine oder die andere zum
+            Mitspielen.“
+        </blockquote>
+    </div>
+</div>
+
+{% set items = [{
+    von: "19 Uhr",
+    bis: "19.30 Uhr",
+    title: "Kaltgestellt",
+    subtitle: "Eine Groteske von Michele Lowe",
+    desc: "Das monatliche Treffen der befreundeten Ehepaare endet diesmal unerwartet. Die Männer finden sich im Keller, in einem großen Kühlraum wieder. Und die Frauen ziehen vom Leder."
+}, {
+    label: "test 2"
+}] %}
+
+<div class="c-timetable  u-gapLarge">
+    <h2>Festival-Programm</h2>
+    <p>am Samstag, 13. Oktober 2018</p>
+    <ul>
+        {% for item in items %}
+            <li class="">{{ item.label }}</li>
+        {% endfor %}
+    </ul>
+</div>
+
 {% include "footer.njk" %}
