--- a/src/scss/5-objects/_objects.o-subhead.scss
+++ b/src/scss/5-objects/_objects.o-subhead.scss
@@ -1,7 +1,11 @@
 .o-subhead {
     font-style: italic;
-    
-    & + h1, & + h2, & + h3, & + h4, & + h5, & + h6 {
+
+    & + h1, & + h2, & + h3 {
         margin-top: 0;
+    }
+
+    h1 + &, h2 + &, h3 + & {
+        margin-top: 0.2em;
     }
 }
