--- a/src/scss/5-objects/_objects.o-btn.scss
+++ b/src/scss/5-objects/_objects.o-btn.scss
@@ -2,9 +2,10 @@
     display: inline-block;
     text-decoration: none;
     padding: 0.2em 1em;
-    border: 2px solid currentColor;
+    border: 2px solid color('primary');
+
     &:hover {
-        background: currentColor;
+        background: color('primary');
         color: color('white');
     }
 }
