--- a/src/scss/2-tools/_tools._functions.scss
+++ b/src/scss/2-tools/_tools._functions.scss
@@ -45,3 +45,8 @@
 
     @return $new;
 }
+
+// Format the SVG as a URL
+@function inline-svg($string) {
+    @return url('data:image/svg+xml,#{url-encode($string)}');
+}
