--- a/src/scss/7-utilities/_utilities.text.scss
+++ b/src/scss/7-utilities/_utilities.text.scss
@@ -1,3 +1,9 @@
 .text-center {
     text-align: center;
 }
+
+.text-hl {
+    font-family: $font-headline;
+    font-weight: 900;
+    font-style: italic;
+}
