--- a/src/scss/6-components/_components.c-animation.scss
+++ b/src/scss/6-components/_components.c-animation.scss
@@ -11,30 +11,29 @@
         width: 100%;
     }
 
+    &__bg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    &__content {
+        position: relative;
+    }
+
     #frame-1 {
         display: flex;
         justify-content: center;
         align-items: center;
-        background-image: url('../img/animation/frame-1.jpg');
-        background-size: cover;
     }
 
     #frame-2 {
         display: flex;
         justify-content: center;
         align-items: center;
-        background-image: url('../img/animation/frame-2.jpg');
-        background-size: cover;
-    }
-
-    .text-hl {
-        font-family: $font-headline;
-        font-weight: 900;
-        font-style: italic;
-    }
-
-    .text-primary {
-        fill: color('primary');
     }
 
     &__border {
