--- a/src/html/partials/animation.njk
+++ b/src/html/partials/animation.njk
@@ -1,6 +1,6 @@
 <div class="c-animation js-animation">
     <div class="c-animation__frame" id="frame-1">
-        <img class="c-animation__bg" src="assets/img/animation/frame-1.jpg">
+        <img class="c-animation__bg js-img" src="assets/img/animation/frame-1.jpg">
         <svg class="c-animation__content js-content" style="opacity: 1" width="600" height="400" viewBox="0 0 600 400">
             <text transform="matrix(0.9848 -0.1736 0.1736 0.9848 46.3701 180.3584)" style="fill:#D4A169; font-family:'Playfair Display'; font-size:87px;">Willkommen</text>
             <text transform="matrix(1 0 0 1 278.7505 193.2178)" style="fill:#D4A169; font-size:40px;">im</text>
@@ -10,13 +10,13 @@
         </svg>
     </div>
     <div class="c-animation__frame" id="frame-2" style="opacity: 0">
-        <img class="c-animation__bg" src="assets/img/animation/frame-2.jpg">
+        <img class="c-animation__bg js-img" src="assets/img/animation/frame-2.jpg">
         <svg class="c-animation__content js-content" width="831px" height="326px" viewBox="0 0 831 326">
             <text transform="matrix(0.9848 -0.1736 0.1736 0.9848 257.666 294.1543)" style="fill:#FFF; font-family:'Playfair Display'; font-size:86px;">Parkett!</text>
             <text transform="matrix(0.9848 -0.1736 0.1736 0.9848 32.2832 208.1885)" style="fill:#FFF; font-family:'Playfair Display'; font-size:78px;">Pausenlos Programm</text>
             <text transform="matrix(1 0 0 1 402.1255 181.208)" style="fill:#FFF; font-family:'Lato-Regular'; font-size:28px;">im</text>
             <line style="fill:none;stroke:#FFF;stroke-width:4;stroke-miterlimit:10;" x1="380" y1="182" x2="266" y2="204"/>
-            <line style="fill:none;stroke:#FFF;stroke-width:4;stroke-miterlimit:10;" x1="574" y1="147" x2="449.9" y2="170"/>
+            <line style="fill:none;stroke:#FFF;stroke-width:4;stroke-miterlimit:10;" x1="449.9" y1="170" x2="574" y2="147"/>
         </svg>
     </div>
     <div class="c-animation__frame" id="frame-3" style="opacity: 0">
