--- a/src/html/partials/footer.njk
+++ b/src/html/partials/footer.njk
@@ -2,11 +2,10 @@
         </div>
         {% include "icons.njk" %}
 
-        <!-- Quelle: https://github.com/juliangarnier/anime -->
-        <script src="assets/js/anime.min.js"></script>
-
-        <!-- Quelle: https://github.com/kenwheeler/cash -->
         <script src="assets/js/cash.min.js"></script>
+        <script src="assets/js/TweenLite.min.js"></script>
+        <script src="assets/js/CSSPlugin.min.js"></script>
+        <script src="assets/js/TimelineLite.min.js"></script>
 
         <script src="assets/js/app.bundle.js"></script>
     </body>
