--- a/src/html/partials/animation.njk
+++ b/src/html/partials/animation.njk
@@ -20,7 +20,13 @@
         </svg>
     </div>
     <div class="c-animation__frame" id="frame-3" style="opacity: 0">
-
+        <img class="c-animation__bg js-img" src="assets/img/animation/frame-3.jpg">
+        <div class="c-animation__content js-content">
+            <p class="text-hl">
+                Treffpunkt Parkett – für Groß und Klein<br>
+                Fiebern Sie mit uns!
+            </p>
+        </div>
     </div>
     <div class="c-animation__border">
         <div class="progress js-progress"></div>
