--- a/src/html/partials/animation.njk
+++ b/src/html/partials/animation.njk
@@ -28,6 +28,22 @@
             </p>
         </div>
     </div>
+    <div class="c-animation__frame" id="frame-4" style="opacity: 0">
+        <img class="c-animation__bg js-img" src="assets/img/animation/frame-4.jpg">
+        <div class="c-animation__content js-content">
+            <p class="text">Wir machen mit beim</p>
+            <p class="title text-hl">Festival Theaterfieber</p>
+            <p class="text">am Samstag, 13. Oktober 2018<br>von 19 bis 24 Uhr.</p>
+            <p class="divider">
+                <svg width="62px" height="8px" viewBox="0 0 62 8">
+                    <circle fill="#D4A169" cx="31" cy="4" r="4"/>
+                    <circle fill="#D4A169" cx="58" cy="4" r="4"/>
+                    <circle fill="#D4A169" cx="4" cy="4" r="4"/>
+                </svg>
+            </p>
+            <p class="slogan text-hl">Kommen Sie zu uns!</p>
+        </div>
+    </div>
     <div class="c-animation__border">
         <div class="progress js-progress"></div>
         <span class="top-left"></span>
