--- a/src/scss/6-components/_components.c-animation.scss
+++ b/src/scss/6-components/_components.c-animation.scss
@@ -26,37 +26,17 @@
         position: relative;
     }
 
-    #frame-1 {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    #frame-2 {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    #frame-3 {
-
-
-        #{$this}__content {
-            @include ms-respond('font-size', 5);
-            position: absolute;
-            bottom: 100px;
-            left: 12%;
-            right: 12%;
-        }
-    }
-
     &__border {
         position: absolute;
         top: 50px;
-        right: 50px;
+        right: 15px;
         bottom: 50px;
-        left: 50px;
+        left: 15px;
         border: 2px solid color('white');
+        @include breakpoint('small'){
+            right: 50px;
+            left: 50px;
+        }
 
         .progress {
             position: absolute;
@@ -89,6 +69,58 @@
         .bottom-right {
             bottom: -10px;
             right: -10px;
+        }
+    }
+}
+
+#frame-1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#frame-2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#frame-3 {
+    .c-animation__content {
+        @include ms-respond('font-size', 5);
+        position: absolute;
+        bottom: 100px;
+        left: 12%;
+        right: 12%;
+    }
+}
+
+#frame-4 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    .text {
+        @include ms-respond('font-size', 2);
+    }
+
+    .title {
+        color: color('primary');
+        @include ms-respond('font-size', 6);
+        margin: 0;
+        line-height: 1;
+    }
+
+    .slogan {
+        @include ms-respond('font-size', 4);
+        margin: 0;
+    }
+
+    .divider {
+        margin: 1em 0 0.5em;
+        svg {
+            margin: 0 auto;
         }
     }
 }
