--- a/src/scss/6-components/_components.c-timetable.scss
+++ b/src/scss/6-components/_components.c-timetable.scss
@@ -8,12 +8,18 @@
     }
 
     &__item {
-        display: grid;
-        grid-template-columns: 10.5em 2fr 2fr;
         padding: 1.5em 0;
         border-bottom: 1px solid color('white');
         &:first-child {
             border-top: 1px solid color('white');
+        }
+
+        @include breakpoint('small'){
+            display: grid;
+            grid-template-columns: 13em 1fr;
+        }
+        @include breakpoint('large'){
+            grid-template-columns: 13em 1fr 1fr;
         }
     }
 
@@ -21,30 +27,45 @@
         line-height: 1.2;
         position: relative;
         white-space: nowrap;
-        padding-top: 0.2em;
-        padding-right: 2em;
-        border-right: 1px solid color('grey', 'dark');
+
+        padding-bottom: 1em;
+        border-bottom: 1px solid color('grey', 'dark');
+        margin-bottom: 1em;
+        @include breakpoint('small'){
+            grid-row: 1 / 3;
+            padding-bottom: 0;
+            margin-bottom: 0;
+            border-bottom: 0;
+            border-right: 1px solid color('grey', 'dark');
+            padding-right: 2em;
+            margin-right: 2em;
+            padding-top: 0.3em;
+        }
     }
 
     &__date {
-        font-family: $font-headline;
-        font-weight: 900;
-        font-style: italic;
-        font-size: 1.5em;
+        @include ms-respond('font-size', 2);
         color: color('primary');
     }
 
     &__head {
-        padding: 0 2em;
-    }
-
-    &__title {
-        @include ms-respond('font-size', 2);
+        @include breakpoint('large'){
+            padding-right: 2em;
+        }
     }
 
     &__text {
-        border-left: 1px solid color('grey', 'dark');
-        padding-left: 2em;
-        padding-top: 0.2em;
+
+        padding-top: 1em;
+        border-top: 1px solid color('grey', 'dark');
+        margin-top: 1em;
+        @include breakpoint('large'){
+            padding-top: 0;
+            border-top: 0;
+            margin-top: 0;
+            border-left: 1px solid color('grey', 'dark');
+            padding-left: 2em;
+            padding-top: 0.3em;
+        }
     }
 }
