--- a/src/scss/6-components/_components.c-header.scss
+++ b/src/scss/6-components/_components.c-header.scss
@@ -4,7 +4,7 @@
     left: 0;
     right: 0;
     padding: 0 1em;
-    max-width: $grid-width;
+    max-width: 1300px;
     margin: 0 auto;
 
     &__content {
