--- a/src/scss/6-components/_components.c-intro.scss
+++ b/src/scss/6-components/_components.c-intro.scss
@@ -2,7 +2,7 @@
     position: relative;
     margin: 6em auto 0;
     padding: 0 1em;
-    max-width: $grid-width;
+    max-width: 1000px;
     @include breakpoint('small'){
         display: grid;
         grid-template-columns: 1fr 1fr;
