--- a/src/html/festival.njk
+++ b/src/html/festival.njk
@@ -75,8 +75,8 @@
         {% for item in items %}
             <li class="c-timetable__item">
                 <div class="c-timetable__time">
-                    <span class="c-timetable__date text-hl">{{ item.von }} Uhr</span><br>
-                    bis&nbsp;<span class="c-timetable__date text-hl">{{ item.bis }} Uhr</span>
+                    <span class="c-timetable__date text-hl">{{ item.von }} Uhr</span>&ensp;bis<br>
+                    <span class="c-timetable__date text-hl">{{ item.bis }} Uhr</span>
                 </div>
                 <div class="c-timetable__head">
                     <h3>{{ item.title }}</h3>
