--- a/src/scss/6-components/_components.c-header.scss
+++ b/src/scss/6-components/_components.c-header.scss
@@ -17,4 +17,19 @@
     &__siteLink {
         display: contents;
     }
+
+    &__menu {
+        display: inline-block;
+        padding: 2.5em;
+        position: relative;
+        left: 1.5em;
+        @include breakpoint('large'){
+            display: none;
+        }
+
+        &:hover, &:focus {
+            outline: 0;
+            color: color('primary');
+        }
+    }
 }
