--- a/src/html/partials/animation.njk
+++ b/src/html/partials/animation.njk
@@ -9,26 +9,24 @@
             <line style="fill:none;stroke:#D4A169;stroke-width:4;stroke-miterlimit:10;" x1="347" y1="173" x2="522" y2="142"/>
         </svg>
     </div>
-    <div class="c-animation__frame" id="frame-2" style="opacity: 0">
+    <div class="c-animation__frame" id="frame-2">
         <img class="c-animation__bg js-img" src="assets/img/animation/frame-2.jpg">
         <svg class="c-animation__content js-content" width="831px" height="326px" viewBox="0 0 831 326">
             <text transform="matrix(0.9848 -0.1736 0.1736 0.9848 257.666 294.1543)" style="fill:#FFF; font-family:'Playfair Display'; font-size:86px;">Parkett!</text>
             <text transform="matrix(0.9848 -0.1736 0.1736 0.9848 32.2832 208.1885)" style="fill:#FFF; font-family:'Playfair Display'; font-size:78px;">Pausenlos Programm</text>
-            <text transform="matrix(1 0 0 1 402.1255 181.208)" style="fill:#FFF; font-family:'Lato-Regular'; font-size:28px;">im</text>
+            <text transform="matrix(1 0 0 1 402.1255 181.208)" style="fill:#FFF; font-size:28px;">im</text>
             <line style="fill:none;stroke:#FFF;stroke-width:4;stroke-miterlimit:10;" x1="380" y1="182" x2="266" y2="204"/>
             <line style="fill:none;stroke:#FFF;stroke-width:4;stroke-miterlimit:10;" x1="449.9" y1="170" x2="574" y2="147"/>
         </svg>
     </div>
-    <div class="c-animation__frame" id="frame-3" style="opacity: 0">
+    <div class="c-animation__frame" id="frame-3">
         <img class="c-animation__bg js-img" src="assets/img/animation/frame-3.jpg">
         <div class="c-animation__content js-content">
-            <p class="text-hl">
-                Treffpunkt Parkett – für Groß und Klein<br>
-                Fiebern Sie mit uns!
-            </p>
+            <p class="text-hl  top-text">Treffpunkt Parkett – für Groß und Klein</p>
+            <p class="text-hl">Fiebern Sie mit uns!</p>
         </div>
     </div>
-    <div class="c-animation__frame" id="frame-4" style="opacity: 0">
+    {# <div class="c-animation__frame" id="frame-4">
         <img class="c-animation__bg js-img" src="assets/img/animation/frame-4.jpg">
         <div class="c-animation__content js-content">
             <p class="text">Wir machen mit beim</p>
@@ -43,7 +41,7 @@
             </p>
             <p class="slogan text-hl">Kommen Sie zu uns!</p>
         </div>
-    </div>
+    </div> #}
     <div class="c-animation__border">
         <div class="progress js-progress"></div>
         <span class="top-left"></span>
