--- a/src/html/partials/animation.njk
+++ b/src/html/partials/animation.njk
@@ -11,21 +11,26 @@
     </div>
     <div class="c-animation__frame" id="frame-2">
         <img class="c-animation__bg js-img" src="assets/img/animation/frame-2.jpg">
-        <svg class="c-animation__content js-content" width="831px" height="326px" viewBox="0 0 831 326">
+        {# <svg class="c-animation__content js-content" width="831px" height="326px" viewBox="0 0 831 326">
             <text transform="matrix(0.9848 -0.1736 0.1736 0.9848 257.666 294.1543)" style="fill:#FFF; font-family:'Playfair Display'; font-size:86px;">Parkett!</text>
             <text transform="matrix(0.9848 -0.1736 0.1736 0.9848 32.2832 208.1885)" style="fill:#FFF; font-family:'Playfair Display'; font-size:78px;">Pausenlos Programm</text>
             <text transform="matrix(1 0 0 1 402.1255 181.208)" style="fill:#FFF; font-size:28px;">im</text>
             <line style="fill:none;stroke:#FFF;stroke-width:4;stroke-miterlimit:10;" x1="380" y1="182" x2="266" y2="204"/>
             <line style="fill:none;stroke:#FFF;stroke-width:4;stroke-miterlimit:10;" x1="449.9" y1="170" x2="574" y2="147"/>
-        </svg>
+        </svg> #}
+        <div class="c-animation__content js-content">
+            <p class="text-hl top-text">Pausenlos Programm</p>
+            <p><span>im</span></p>
+            <p class="text-hl bottom-text">Parkett</p>
+        </div>
     </div>
-    <div class="c-animation__frame" id="frame-3">
+    {# <div class="c-animation__frame" id="frame-3">
         <img class="c-animation__bg js-img" src="assets/img/animation/frame-3.jpg">
         <div class="c-animation__content js-content">
             <p class="text-hl  top-text">Treffpunkt Parkett – für Groß und Klein</p>
             <p class="text-hl">Fiebern Sie mit uns!</p>
         </div>
-    </div>
+    </div> #}
     {# <div class="c-animation__frame" id="frame-4">
         <img class="c-animation__bg js-img" src="assets/img/animation/frame-4.jpg">
         <div class="c-animation__content js-content">
