--- a/src/html/partials/animation.njk
+++ b/src/html/partials/animation.njk
@@ -1,3 +1,4 @@
+<!-- Animation Begin -->
 <div class="c-animation js-animation">
     <div class="c-animation__frame" id="frame-1">
         <img class="c-animation__bg js-img" src="assets/img/animation/frame-1.jpg">
@@ -55,3 +56,4 @@
         <span class="bottom-right"></span>
     </div>
 </div>
+<!-- Animation Ende -->
