--- a/src/html/partials/footer.njk
+++ b/src/html/partials/footer.njk
@@ -1,11 +1,15 @@
             <div style="height:8em"></div>
         </div>
-        {% include "icons.njk" %}
 
+        <!-- Quelle: https://github.com/kenwheeler/cash -->
         <script src="assets/js/cash.min.js"></script>
+        <!-- Quelle: https://greensock.com/tweenlite -->
         <script src="assets/js/TweenLite.min.js"></script>
+        <!-- Quelle: https://greensock.com/CSSPlugin -->
         <script src="assets/js/CSSPlugin.min.js"></script>
+        <!-- Quelle: https://greensock.com/timelinelite -->
         <script src="assets/js/TimelineLite.min.js"></script>
+        <!-- Quelle: https://github.com/feimosi/baguetteBox.js/ -->
         <script src="assets/js/baguetteBox.min.js"></script>
 
         <script src="assets/js/app.bundle.js"></script>
