--- a/src/html/partials/footer.njk
+++ b/src/html/partials/footer.njk
@@ -1,4 +1,8 @@
-            <div style="height:8em"></div>
+            <div class="c-footer">
+                <div class="c-footer__inner">
+                    &copy; 2018 &ndash; Theater im Parkett
+                </div>
+            </div>
         </div>
 
         <!-- Quelle: https://github.com/kenwheeler/cash -->
