--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -20,7 +20,7 @@
     </article>
 </div>
 
-<div class="c-highlight">
+<div class="c-highlight  u-gapLargeBottom">
     <h2 class="c-highlight__title">Highlight:</h2>
     <div class="c-highlight__date">
         <svg>
