--- a/src/scss/6-components/_components.c-highlight.scss
+++ b/src/scss/6-components/_components.c-highlight.scss
@@ -38,7 +38,7 @@
     &__text {
         max-width: 40em;
         margin: 0 auto;
-        padding: 2em;
+        padding: 2em 2em 0;
         background: color('grey', 'xdark');
     }
 
@@ -51,6 +51,6 @@
         right: 0;
         background-image: url('../img/zuschauer.jpg');
         background-size: cover;
-        bottom: 8em;
+        height: 400px;
     }
 }
